Print PDFs during registration processing (#15)
Implements printing of PDFs using xelatex process.

TODO:
- escape latex
- insert pdf file to DB

--- a/orca/latex/registration.tex
+++ b/orca/latex/registration.tex
@@ -3,7 +3,7 @@
 \usepackage[czech]{babel}
 \usepackage{graphicx} % Required for inserting images
 
-%ovlinění papíru
+%Paper size
 \usepackage[includehead, nomarginpar, top = 0mm, right = 15mm, left = 15mm]{geometry}
 
 \usepackage{fancyhdr}
@@ -28,42 +28,42 @@
 \input{data.tex}
 
 \begin{document}
-	
+
 	\LARGE
-	
+
 
 	\textbf{PŘIHLÁŠKA PRO NOVÉ ČLENY A ČLENKY} $ \begin{array}{l}\includegraphics[scale=0.35]{logo}\end{array} $	 \\
-	
+
 	\large
-	
+
 	Vyplněním této přihlášky vyjadřuji svou svobodnou vůli stát se členem\_členkou
 	Odborové organizace pracujících v ICT.\\
-	
+
 	Jméno: \longunderline{\Name}\\
-	
+
 	Příjmení: \longunderline{\Surname}\\
-	
+
 	Datum narození: \longunderline{\DateOfBirth}\\
-	
+
 	Soukromý telefon: \longunderline{\Phone}\\
-	
+
 	Soukromý email: \longunderline{\Email}\\
-	
+
 	\section{Adresa}
-	
+
 	Ulice a číslo: \longunderline{\Address}\\
-	
+
 	Město: \longunderline{\City} PSČ: \longunderline{\Zipcode} \\
-	
+
 	\section{Zaměstnání}
-	
+
 	Název firmy: \longunderline{\Company}\\
-	
+
 	Pracovní pozice: \longunderline{\Position}\\
-	
+
 	Podpisem se zavazuji, že budu plnit povinnosti vyplývající ze stanov.\\\\
-	
-	%Je třeba předat obrázek podpisu z data.tex 
+
+	%Include signature with data from data.tex
 	V...\textbf{Prague}... dne ...\textbf{\today}... \hspace{50mm} Podpis: $ \begin{array}{l}\includegraphics{signature}\end{array} $  \\
-	
+
 \end{document}
