--- a/orca/latex/data.tex
+++ b/orca/latex/data.tex
@@ -1,11 +1,11 @@
-\newcommand{\Name}{Jane}
-\newcommand{\Surname}{Doe}
-\newcommand{\DateOfBirth}{1970-01--01}
-\newcommand{\Phone}{+420666777888}
-\newcommand{\Email}{myself@me.com}
-\newcommand{\Address}{Bezručova}
-\newcommand{\City}{Brno}
-\newcommand{\Zipcode}{63600}
-\newcommand{\Company}{COZZ}
-\newcommand{\Position}{revolutionary}
-\newcommand{\Signature}{Jane Doe}
+\def\Name{Jane}
+\def\Surname{Doe}
+\def\DateOfBirth{1970-01--01}
+\def\Phone{+420666777888}
+\def\Email{myself@me.com}
+\def\Address{Bezručova}
+\def\City{Brno}
+\def\Zipcode{63600}
+\def\Company{COZZ}
+\def\Position{revolutionary}
+\def\Signature{Jane Doe}
