Improve signature sizing (#54)
In most cases it's probable better to resize by height rather than width
so that very high (portrait) photos don't overflow to next page

--- a/orca/latex/registration.tex
+++ b/orca/latex/registration.tex
@@ -108,7 +108,7 @@
       \hspace{1mm}\langSignature:
       \vspace{1mm}\\
       \color{gray}
-      \fbox{$ \begin{array}{l}\includegraphics[width=63mm,scale=0.4]{signature}\end{array} $}
+      \fbox{$ \begin{array}{l}\includegraphics[height=25mm,scale=0.4]{signature}\end{array} $}
     }
 
 \end{document}
