--- a/orca/latex/lang.cs.tex
+++ b/orca/latex/lang.cs.tex
@@ -1,7 +1,8 @@
 \def\langTitle{PŘIHLÁŠKA}
-\def\langSubTitle{O členství}
+\def\langSubTitle{Ke členství}
 \def\langDescription{
-  Vyplněním této přihlášky vyjadřuji svou svobodnou vůli stát se členem*kou
+  Vyplněním této přihlášky vyjadřuji svou svobodnou vůli stát se členem*kou\\
+  Odborové organizace pracujících v ICT.
 }
 \def\langFirstName{Jméno}
 \def\langLastName{Příjmení}
