--- a/orca/latex/lang.en.tex
+++ b/orca/latex/lang.en.tex
@@ -1,7 +1,8 @@
 \def\langTitle{APPLICATION}
 \def\langSubTitle{For Membership}
 \def\langDescription{
-  By filling out this application, I express my free will to become a member of
+  By submitting this application, I express my free will to become a member of\\
+  The Trade Union of Workers in ICT (officially: Odborové organizace pracujících v ICT).
 }
 \def\langFirstName{First Name}
 \def\langLastName{Last Name}
@@ -17,7 +18,7 @@
 \def\langOccupation{Job Title}
 \def\langConfirmation{By signing I pledge to follow obligations arising from the statutes.}
 \def\langPlaceDate{In \field{Praze} on}
-\def\langSignature{Siganture}
+\def\langSignature{Signature}
 \def\langFootnote{
   I agree with processing of my personal information in connection with registration of my mebership.
 }
