--- a/orca/latex/registration.tex
+++ b/orca/latex/registration.tex
@@ -60,8 +60,7 @@
 
     \vspace{10mm}
 
-    \langDescription\\
-    Odborové organizace pracujících v ICT.
+    \langDescription
 
     \vspace{10mm}
 
