Fix typo in PDF (#57)
One more typo in english version of pdf

--- a/orca/latex/lang.en.tex
+++ b/orca/latex/lang.en.tex
@@ -20,5 +20,5 @@
 \def\langPlaceDate{In \field{Prague} on}
 \def\langSignature{Signature}
 \def\langFootnote{
-  I agree with processing of my personal information in connection with registration of my mebership.
+  I agree with processing of my personal information in connection with registration of my membership.
 }
